- Added /commands/Administration/botbackup.js
	- Added /handlers/Backup/ and its contents

- Fixed bugs with message logging and added features
	- Fixed crash when the logging message was over Discord's character limit
	- Log handing is handled in it's own handler in /handlers/main/Logging/Logging.js ...Handler
	- Added visual representations of what changed in a message edit
	- Improved stability overall
	- Added message filtering (apparently I didn't have it before :blobsweat:)

- Added /commands/Fun/bup.js
	- Added /assets/soundfonts/ and its contents
	- Added /assets/downloads/midi/ and its contents

- Database changes
	- All databases are now called from client.db.<table>
	- All commands that accessed the database have been updated to reflect the change
	- Overall database stability improved

- Updates to /handlers/Main/main.js
	- Improved error handling
	- Bot will disallow database read/writes after uncaughtException error until reboot
	- Bot will delete needless files on startup

- Commands will now run if a message is updated

- Updates to /commands/Fun/owofy.js
	- It now uses a different npm module (owoify-js)
	- Fixed potential crashes if the message went above the character limit
	- Better stability when getting the previous message content

- Phone updates
	- Waiting and chatting arrays were moved to /handlers/Main/main.js and are now accessed through client.phone
	- Messages are now collected through the default client.on("message") emitter in /handlers/Main/main.js instead of a seperate .on function
	- Added /handlers/Phone/phone.js for handing incoming messages
	- Changed /commands/Fun/phone.js to reflect changes
	- Greatly improved connection stability and reduced processor usage

- /commands/Moderation/backup.js updated to have restore confirmation show time limit

- /commands/Moderation/ban.js stability improved

- /commands/Moderation/kick.js stability improved

- /config/config.json updates
	- Added new fields