@@ -84,4 +84,4 @@ module.exports = {
 
         return Promise.resolve(ignoredid); //Send a success message
     }
-}
+};
