@@ -2,11 +2,13 @@ const config = require("../../config/config.json");
 const view = require("./View/view.js");
 const prefix = require("./Prefix/prefix.js");
 const logs = require("./Logs/logs.js");
+const commands = require("./Commands/commands.js");
 
 module.exports = {
     view: view,
     prefix: prefix,
     logs: logs,
+    commands: commands,
     ensureAll(id) {
         const settings = client.db.settings.ensure(id, { //Make sure that the enmap has the default settings
             prefix: config.prefix,
